# cvtree-parallelization-project

./: .gitignore  CMakeLists.txt  improved  improved.cpp  improved_1  improved_2  tidy  tidy.cpp
output/: original.txt
test/: verify.rb
